# B2SpeakTest

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
azure_function/: db_client.py  function_app.py  llm_client.py  local.settings.example.json  requirements.txt
azure_function/domain/: models.py
b2speak_api/: config.py  main.py
b2speak_api/application/use_cases/: speak_evaluation.py  speaking_image.py  user.py
b2speak_api/domain/models/: speak_evaluation.py  speaking_image.py  user.py
b2speak_api/domain/repositories/: speak_evaluation.py  speaking_image.py  user.py
b2speak_api/infrastructure/: auth.py  azure_blob_storage.py
b2speak_api/infrastructure/mongodb_repositories/: speak_evaluation.py  speaking_image.py  user.py
b2speak_api/interfaces/: api.py  upload_test.html
